# students-database

./: CMakeLists.txt  notes.txt  requirements.md
src/: database.cpp  database.hpp  main.cpp  student.cpp  student.hpp
src/tests/: test.cpp
